stylesheet/stylesheet.css
                    /* Imports & Global Varables */
:root {
    --navy_color: rgb(25 30 41);
    --dark_blue: rgb(20 45 70);
    --green: rgb(1 195 141);
    --grey: rgb(105 110 121);
    --sup-font: "Lato", sans-serif;
    --main_font: "BlackFuture", sans-serif;
    --motion-ease: cubic-bezier(0.68, -0.6, 0.32, 1.6);
    --motion-duration: 0.3s;
}

@font-face {
    font-family: 'BlackFuture';
    src: url("/assets/BlackFuture.otf") format("opentype");
}


                    /* Body Style */
body {
    font-family: var(--sup-font);
    margin: 0px;
    padding: 0px;
    color: white;
    overflow-x: hidden;
}

.symbol {
    position: absolute;
    animation-duration: 100s; /* Adjust the duration as needed */
    animation-timing-function: linear;
    animation-iteration-count: infinite;
}

@keyframes rotateAndMove {
    0% {
        transform: rotate(0deg) translate(0, 0);
    }
    25% {
        transform: rotate(90deg) translate(15px, 15px); /* Adjust values as needed */
    }
    50% {
        transform: rotate(180deg) translate(-15px, 10px); /* Adjust values as needed */
    }
    75% {
        transform: rotate(270deg) translate(10px, -15px); /* Adjust values as needed */
    }
    100% {
        transform: rotate(360deg) translate(0px, 0px); /* Adjust values as needed */
    }
}

@keyframes rotateAndMoveanticlockwise {
    0% {
        transform: rotate(0deg) translate(0, 0);
    }
    25% {
        transform: rotate(-90deg) translate(-15px, -15px); /* Adjust values as needed */
    }
    50% {
        transform: rotate(-180deg) translate(15px, -10px); /* Adjust values as needed */
    }
    75% {
        transform: rotate(-270deg) translate(-10px, 15px); /* Adjust values as needed */
    }
    100% {
        transform: rotate(-360deg) translate(0px, 0px); /* Adjust values as needed */
    }
}


                    /* Navigations Bar Style */
.navigation-bar {
    width: 100%;
    background-color: var(--navy_color);
    height: 3.5rem;
    display: flex;
    justify-content: space-between;
    position: fixed;
    z-index: 5;
    transition: top 0.3s;
    top: 0;
}

.navbar-hidden {
    top: -3.5rem; /* Hide the navbar off-screen */
}

.left-side {
    display: flex;
    align-items: center;
    padding-left: 40px;
}

#nav-company-name {
    color: white;
    text-decoration: none;
    padding-left: 10px;
}

#nav-company-name:hover {
    color: var(--green);
}

.right-side {
    display: flex;
    align-items: center;
    margin-right: 40px;
}

.nav-list {
    display: flex;
    align-items: center;
    list-style: none;
}

.nav-list li {
    color: white;
    padding-left: 20px;
}

.nav-list li:hover {
    color: var(--green);
}

.nav-list a {
    text-decoration: none;
}


                    /* Landing Section Style */
.landing-page {
    background-color: var(--dark_blue);
    height: 34rem;
    display: flex;
    align-items: center;
    justify-content: center;
    position: relative;
    overflow: hidden;
}

.landing-text-container {
    text-align: center;
    margin-top: 200px;
}

.landing-text-container h2 {
    font-size: 2rem;
    color: var(--green);
}

.symbol1 {
    width: 500px;
    height: auto;
    top: -200px;
    left: -200px;
    animation-name: rotateAndMoveanticlockwise;
}

.symbol2 {
    width: 400px;
    height: auto;
    bottom: 250px;
    right: -200px;
    animation-name: rotateAndMove;
}


                    /* Office Space Style */
.short-bio {
    background-color: var(--dark_blue);
    height: 70rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding-top: 90px;
    position: relative;
}

.bio-text-container {
    width: 80%;
    max-width: 70rem;
    text-align: center;
    margin-top: 40px;
    margin-bottom: 60px;
}

.bio-text-container h2 {
    color: var(--green);
    font-size: 2rem;
}

.img-container {
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: center;
    height: 800px;
    padding-top: 30px;
    transition: transform 0.3s ease 0s;
}

#img-1 {
    position: absolute;
    width: 500px;
    right: -20px;
}

#img-1:hover {
    z-index: 1;
    width: 550px;
}

#img-2 {
    position: absolute;
    width: 500px;
    left: 5px;
    top: 100px;
}

#img-2:hover {
    z-index: 1;
    width: 550px;
}

#img-3 {
    position: absolute;
    width: 400px;
    top: 300px;
    right: -30px;
}

#img-3:hover {
    z-index: 1;
    width: 450px;
}

.symbol3 {
    width: 150px;
    height: auto;
    top: 100px;
    left: -50px;
    animation-name: rotateAndMove;
}

.symbol4 {
    width: 250px;
    height: auto;
    top: -50px;
    left: 50px;
    animation-name: rotateAndMoveanticlockwise;
}

.symbol5 {
    width: 350px;
    height: auto;
    top: -80px;
    right: -100px;
    animation-name: rotateAndMoveanticlockwise;
}

.symbol6 {
    width: 450px;
    height: auto;
    top: 280px;
    right: -200px;
    animation-name: rotateAndMove;
}

.symbol7 {
    width: 450px;
    height: auto;
    bottom: 80px;
    left: -200px;
    animation-name: rotateAndMoveanticlockwise;
}

.symbol8 {
    width: 350px;
    height: auto;
    bottom: -180px;
    left: 0px;
    animation-name: rotateAndMove;
    z-index: 1;
}

.symbol9 {
    width: 250px;
    height: auto;
    bottom: -80px;
    right: 100px;
    animation-name: rotateAndMove;
    z-index: 1;
}


                    /* Companies Syle */
.companies {
    position: relative;
    height: 36rem;
    background-color: var(--navy_color);
    padding: 2rem;
    display: block;
}

.comp-bg-elements {
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    z-index: 0;
}

.bg-element {
    position: absolute;
    width: 40%;
    height: 100%;
    right: 0;
    object-fit: cover;
    z-index: 1;
}

.left-dots {
    transform: scaleX(-1);
    left: 0;
}

.comp-text-container {
    text-align: center;
    position: relative;
    z-index: 2;
}

.comp-text-container h2 {
    color: var(--green);
    font-size: 2rem;
}

.cards-container {
    display: flex;
    justify-content: center;
    margin-top: 3rem;
    position: relative;
    gap: 3rem;
    /* text-decoration: none; */
}

.card-size {
    background-color: white;
    height: 320px;
    width: 250px;
    padding: 1rem;
    text-decoration: none;
    color: black;
    transition: transform 0.3s ease, box-shadow 0.3s ease;
    border-radius: 8px;
}

.card-size:hover {
    transform: scale(1.05);
    box-shadow: 0 0 20px var(--green);
}

.card-logo {
    width: 180px;
    padding-top: 20px;
    margin: 0px auto;
    padding-left: 35px;
}

.card1-text {
    padding-top: 17px;
}

.card3-text {
    padding-top: 17px;
}

.go-text1 {
    padding-top: 80px;
    padding-left: 30px
}

.go-text2 {
    padding-top: 80px;
    padding-left: 30px;
}

.go-text3 {
    padding-top: 60px;
    padding-left: 30px
}

.gobt {
    color: var(--green);
    font-size: 2rem;
    display: flex;
    align-items: center;
}

.arrow {
    position: relative;
    left: 35px;
    transform: translate(-50%, -50%);
    transform: rotate(90deg);
    cursor: pointer;
    opacity: 0;
}

.arrow span {
    display: block;
    width: 1.5vw;
    height: 1.5vw;
    border-top: 5px solid var(--green);
    border-left: 5px solid var(--green);
    transform: rotate(45deg);
    margin: -10px;
    animation: animate 2s infinite;
}

.arrow span:nth-child(2) {
    animation-delay: -0.2s;
}

.arrow span:nth-child(3) {
    animation-delay: -0.4s;
}

.card-size:hover .arrow {
    opacity: 1;
}

@keyframes animate {
    0% {
        opacity: 0;
        transform: rotate(45deg) translate(20px, 20px);
    }
    50% {
        opacity: 1;
    }
    100% {
        opacity: 0;
        transform: rotate(45deg) translate(-20px, -20px);
    }
}


                    /* Office Location Style */
.maps-location {
    background-color: white;
    height: 50rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.maps-text-container {
    text-align: center;
    color: black;
    width: 70%;
    margin-bottom: 30px;
    margin-top: 10px;
}

.maps-text-container h2 {
    color: var(--green);
    font-size: 2rem;
}

.google-maps-container {
    position: relative;
    max-width: 70%;
    margin-bottom: 60px;
    transition: var(--motion-duration) var(--motion-ease);
}

.google-maps-container:hover {
    transform: scale(1.03);
}

#locationpin {
    width: 30px;
    position: absolute;
    top: 212px;
    left: 476px;
}


                    /* Contact Section Style */
.contact-page {
    background-color: var(--navy_color);
    height: 50rem;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    position: relative;
}

.text-block-container {
    background-color: white;
    color: black;
    width: 70%;
    height: 12rem;
    z-index: 1;
    text-align: center;
    display: flex;
    flex-direction: column;
    align-items: center;
    padding: 20px 0px;
    margin-bottom: 20px;
}

.text-block-container h2 {
    color: var(--green);
    font-size: 2rem;
    margin-bottom: 0px;
}

.text-block-container p {
    width: 70%;
}

.form-block-container {
    background-color: white;
    margin-top: 20px;
    width: 70%;
    height: 25rem;
    z-index: 1;
    display: flex;
    justify-content: center;
    align-items: center;
    gap: 10rem;
}

.contact-form {
    text-align: center;
}

.contact-form h2 {
    color: var(--green);
    font-size: 4rem;
    margin-top: 0px;
}

.contact-button {
    background-color: var(--dark_blue);
}

.bt {
    appearance: none;
    background: transparent;
    border: 0;
    color: #fff;
    cursor: pointer;
    font-size: 1.3rem;
    line-height: 1;
    padding: 1em 1.5em;
    position: relative;
    transition: filter var(--motion-duration);
}

.bt:hover {
    filter: brightness(1.1);
}

.bt:active {
    filter: brightness(0.9);
}

.bt > span {
    display: block;
    position: relative;
    transition: transform var(--motion-duration) var(--motion-ease);
    z-index: 1;
}

.bt:hover > span {
    transform: scale(1.05);
}

.bt:active > span {
    transform: scale(0.95);
}

.bt > svg {
    fill: var(--dark_blue);
    position: absolute;
    top: -5%;
    left: -5%;
    width: 110%;
    height: 110%;
}

.bt > svg > path {
    transition: var(--motion-duration) var(--motion-ease);
}

.bt:hover > svg > path {
    d: path("M0,0 C0,-5 100,-5 100,0 C105,0 105,100 100,100 C100,105 0,105 0,100 C-5,100 -5,0 0,0");
}

.bt:active > svg > path {
    d: path("M0,0 C30,10 70,10 100,0 C95,30 95,70 100,100 C70,90 30,90 0,100 C5,70 5,30 0,0");
}

.our-ecosystem {
    display: flex;
    flex-direction: column;
    align-items: center;
}

.our-ecosystem h2 {
    color: var(--dark_blue);
    font-size: 2rem;
}

.busi-logo {
    width: 80px;
    padding: 10px;
    transition: transform 0.3s ease;
}

.busi-logo:hover {
    transform: scale(1.1);
}


                    /* Footer Styling */
footer {
    background-color: var(--navy_color);
    text-align: center;
    margin: 0;
    padding: 0;
}

footer p {
    color: var(--green);
    margin: 0px;
    padding: 15px;
    font-size: 12px;
}

